force-app/main/default/objects/SEG_Excepciones__c/SEG_Excepciones__c.object-meta.xml
<CustomObject>
    <label>Excepciones</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excepciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>