force-app/main/default/objects/SEG_Excepciones__c/fields/SEG_Activa__c.field-meta.xml
<CustomField>
    <fullName>SEG_Activa__c</fullName>
    <formula>IF( 
				( NOT(ISBLANK(SEG_FechaDesactivacion__c)) &amp;&amp; NOW() &gt;= SEG_FechaActivacion__c &amp;&amp; NOW() &lt; SEG_FechaDesactivacion__c ) || 
				( ISBLANK(SEG_FechaDesactivacion__c) &amp;&amp; NOW() &gt;= SEG_FechaActivacion__c ), 
				true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activa</label>
    <type>Checkbox</type>
</CustomField>