force-app/main/default/objects/SEG_Excepciones__c/fields/SEG_FechaActivacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_FechaActivacion__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha activación</label>
    <type>DateTime</type>
</CustomField>