force-app/main/default/objects/SEG_Excepciones__c/fields/SEG_FechaDesactivacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_FechaDesactivacion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha desactivación</label>
    <type>DateTime</type>
</CustomField>