force-app/main/default/objects/SEG_Excepciones__c/fields/SEG_Grupoasignado__c.field-meta.xml
<CustomField>
    <fullName>SEG_Grupoasignado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo asignado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo colaborador, Grupo Automático Segmentos, Grupo Operativo Segmentos</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Excepciones</relationshipLabel>
    <relationshipName>SEG_GrupoAsignado</relationshipName>
    <type>Lookup</type>
</CustomField>