force-app/main/default/objects/SEG_Excepciones__c/fields/SEG_Inactiva__c.field-meta.xml
<CustomField>
    <fullName>SEG_Inactiva__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactiva</label>
    <type>Checkbox</type>
</CustomField>