force-app/main/default/objects/SEG_Excepciones__c/recordTypes/SEG_Asignacion.recordType-meta.xml
<RecordType>
    <fullName>SEG_Asignacion</fullName>
    <active>true</active>
    <label>Asignación</label>
</RecordType>