force-app/main/default/objects/SEG_Excepciones__c/recordTypes/SEG_Contratos.recordType-meta.xml
<RecordType>
    <fullName>SEG_Contratos</fullName>
    <active>true</active>
    <label>Contratos</label>
</RecordType>