force-app/main/default/objects/SEG_Excepciones__c/recordTypes/SEG_Texto.recordType-meta.xml
<RecordType>
    <fullName>SEG_Texto</fullName>
    <active>true</active>
    <label>Texto</label>
</RecordType>