force-app/main/default/objects/SEG_Excepciones__c/listViews/SEG_Asignacion.listView-meta.xml
<ListView>
    <fullName>SEG_Asignacion</fullName>
    <columns>NAME</columns>
    <columns>SEG_Activa__c</columns>
    <columns>SEG_Organizacion__c</columns>
    <columns>SEG_Zona__c</columns>
    <columns>SEG_Grupoasignado__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SEG_Excepciones__c.SEG_Asignacion</value>
    </filters>
    <label>Asignación</label>
    <sharedTo>
        <roleAndSubordinates>SEG_Segmentos</roleAndSubordinates>
    </sharedTo>
</ListView>